# MDS-IRRS-Lab4

./: README.md  compose.yaml  dvc.yaml  pyproject.toml
data/cache/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore
elastic/: indexer.py  vectorizer.py
elastic/data/: download_file.py  unzip.py
notebooks/: elasticsearch-intro.ipynb  elasticsearch-programming.ipynb  elasticsearch-vector-space.ipynb  fast-vs-elasticsearch.ipynb  vector-search-comparison.ipynb
