[project]
name = "lab4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.63.0",
    "elasticsearch[async]>=8.19.1",
    "elasticsearch-dsl>=8.18.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
]
